src/App.css
@import url('https://fonts.googleapis.com/css?family=Raleway:200,300,400');

.App {
  text-align: center;
  font-family: 'Raleway', sans-serif;
  font-weight: 200;
}

.App-header {
  background-color: black;
  height: 40px;
  padding: 20px;
  color: #33BEFF;
  display: flex;
  font-size: 45px;
  justify-content: center;
}

.App-logo {
  height: 60px;
  width: auto;
  position: fixed;
  left: 0;
  margin-left: 50px;
}

.App-title {
  font-size: 1.5em;
  position: fixed;
  align-self: center;
}

.subtitles {
  position: fixed;
  right: 0;
  display: flex;
  margin: 0 30px 0 50px;
  font-size: 0.4em;
}

.subtitles a {
  text-decoration: none;
}

.App-subtitle {
  margin: 10px 20px 0 20px;
  text-decoration: none;
  color: #33BEFF;
}

.App-intro {
  font-size: large;
}

.timer {
  /*margin: 50px;*/
  display: flex-column;
  justify-content: center;
  align-self: center;
  margin-top: 15vh;
}

.timer * {
  /*margin: 20px;*/
  display: flex-column;
  justify-content: center;
}

.timer h1 {
  font-size: 80px;
}

button {
  height: 60px;
  width: 100px;
  font-size: 25px;
  font-weight: bold;
  border-radius: 10px;
  margin: 10px;
}

button:hover {
  cursor: pointer;
}

.start-btn {
  background-color: #5AFF7F;
}

.pause-btn {
  background-color: #FF5733;
}

.reset-btn {
  background-color: #33BEFF;
}

.change-btn {
  background-color: lightgray;
  margin: 20px 0 0 30px;
}

.submit-btn {
  background-color: lightgray;
  align-self: center;
  margin: 50px 0 0;
  height: 50px;
}

.interval {
  display: flex-column;
  justify-content: flex-start;
}

.form {
  display: flex;
}

.form-left {
  display: flex-column;
  margin: 30px;
}

.input-time {
  font-size: 20px;
  display: flex-column;
}

.input-time label {
  align-self: left;
}

.input-time input {
  height: 50px;
  width: 180px;
  border-radius: 10px;
  text-align: center;
  font-size: 28px;
  align-self: flex-start;
}

.add-interval {
  display: flex;
  justify-content: flex-start;
}

.red-btn {
  background-color: red;
}

.yellow-btn {
  background-color: yellow;
}

.green-btn {
  background-color: #22ff00;
}

.blue-btn {
  background-color: #006bff;
}

.rest-btn {
  background-color: lightgray;
}

.selectedColor {
  border: 2px solid black;
}

.footer {
  margin-top: 40vh;
  display: flex;
  width: 100%;
  justify-content: center;
  margin-bottom: 50px;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

